# ComfyUI-YF-Translation

./: .gitignore  INSTALL.md  README.md  __init__.py  config.json  pyproject.toml
js/: MenuTranslate.js  main.js  utils.js
zh-CN/Menus/: ComfyManager.json  ComfyNodes2Settings.json
