[project]
name = "ComfyUI-YF-Translation"
description = "A translation branch project."
version = "1.9.19"
license = "LICENSE"
dependencies = ["git+https://github.com/Dontdrunk/ComfyUI-DD-Translation/tree/Dontdrunk.git"]

[project.urls]
Repository = "https://github.com/Dontdrunk/ComfyUI-DD-Translation/tree/Dontdrunk"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Dontdrunk"
DisplayName = "ComfyUI-YF-Translation"
